<resources>
    <string name="app_name">PrawnAndCrab</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="facebook_app_id">1942255532739824</string>
    <string name="fb_login_protocol_scheme">fb1942255532739824</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>

    <string name="title_activity_splash">SplashActivity</string>




        //Login
        <string name="phno">Phone Number:</string>
        <string name="name">Name:</string>
        <string name="e_mail">EMail:</string>
        <string name="submit">Submit</string>
        <string name="advanced">Advanced</string>
        <string name="catagory">CATAGORY</string>

        <string name="Phone_num_hint"><font size="12">Phone No</font></string>
        <string name="name_hint"><font size="12">Name</font></string>
        <string name="e_mail_hint"><font size="12">E Mail id</font></string>
        <string name="title_activity_menu_navigation">MenuNavigationActivity</string>
        <string name="addresses_hint"><font size="12">Address</font></string>

        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>

        <string name="action_settings">Settings</string>

        <string name="menu_icon">Menu</string>
        <string name="favourite_icon">Favourite</string>
        <string name="my_order_icon">My Orders</string>
        <string name="history_icon">History</string>
        <string name="today_spl_icon">Today Special</string>
        <string name="offer_icon">Offers</string>
        <string name="feedback_icon">Feedback</string>
        <string name="about_us_icon">About us</string>
        <string name="price">Total : 0.0</string>
        <string name="place_order">Place Order</string>
        <string name="update_item">Update Item</string>
        <string name="category">Category List</string>

    <string name="first_review">Post your first review....</string>




    <!--toolbar text-->
    <string name="content_fragment">Dashboard</string>
    <string name="category_fragment">Category</string>
    <string name="item_fragment">Item</string>
    <string name="my_order">My Orders</string>


    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_notification">No Offers</string>

</resources>
