<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nickteck.cus_prawnandcrab.fragment.ContentFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_layout"
        android:orientation="horizontal"
        android:id="@+id/ldtSlideShow">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:padding="10dip"
            app:centered="true"
            app:fillColor="#ff0099cc"
            app:pageColor="#fff"
            app:snap="false" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ldtSlideShow"
        android:id="@+id/ldtStatus"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_padding"
            android:background="@color/white_color"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ldtStatus"
        android:paddingTop="@dimen/login_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/ldtMenuList">

            <ImageView
                android:layout_width="@dimen/menu_image_dimen"
                android:layout_height="@dimen/menu_image_dimen"
                android:layout_gravity="center"
                android:src="@drawable/menunew" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_icon"
                style="@style/menu_text_style"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/ldtFav">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/favoritenew"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/ldtMyOrders">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/ordernew"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/ldtHistoryList">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/historynew"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/login_padding"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/todaynew"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_spl_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/offernew"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/feedbacknew"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/menu_image_dimen"
                    android:layout_height="@dimen/menu_image_dimen"
                    android:src="@drawable/aboutnew"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_icon"
                    style="@style/menu_text_style"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
