<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:id="@+id/sclMainView">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/prawncrablogo"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:gravity="center"
                android:background="@drawable/login_bg_xml">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                  >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:layout_gravity="center"
                        android:textSize="@dimen/item_heading_text_size"
                        android:textColor="@color/white_color"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:background="@drawable/login_drawable">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Phone_num_hint"
                            android:textColorHint="@color/white_color"
                            android:textColor="@color/white_color"
                            android:maxLength="10"
                            android:layout_gravity="center"
                            android:inputType="phone"
                            android:textSize="@dimen/item_price_text_size"
                            android:id="@+id/edtPhone"
                            android:background="@android:color/transparent"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:background="@drawable/login_drawable"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name_hint"
                                android:textColorHint="@color/white_color"
                                android:textColor="@color/white_color"
                                android:textSize="@dimen/item_price_text_size"
                                android:maxLines="1"
                                android:inputType="text"
                                android:id="@+id/edtName"
                                android:background="@android:color/transparent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:background="@drawable/login_drawable"
                            android:id="@+id/ldtEMail_id"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/e_mail_hint"
                                android:textColorHint="@color/white_color"
                                android:textColor="@color/white_color"
                                android:textSize="@dimen/item_price_text_size"
                                android:id="@+id/edtMailId"
                                android:background="@android:color/transparent"
                                android:maxLines="1"
                                android:nextFocusDown="@id/edtAddress"
                                android:inputType="textEmailAddress"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:background="@drawable/login_drawable"
                        android:id="@+id/ldtEAddress">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/addresses_hint"
                            android:textColorHint="@color/white_color"
                            android:textColor="@color/white_color"
                            android:textSize="@dimen/item_price_text_size"
                            android:id="@+id/edtAddress"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                       >

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/submit"
                            android:theme="@style/PrimaryFlatButton"
                            android:textColor="@color/white_color"
                            android:background="@color/colorPrimaryDark"
                            android:id="@+id/btnSubmitLogin"

                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressLogin"/>
</RelativeLayout>