<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:gravity="center"
        android:textColor="@color/black_color"
        android:textSize="@dimen/item_heading_text_size"
        android:textStyle="bold"
        android:id="@+id/txtCat"/>
<android.support.v4.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/order_taken_grid_size"
    android:id="@+id/swipe_container"
    android:layout_below="@+id/txtCat"
   >

<!--<android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scrollbars="vertical"
        android:layoutAnimation="@anim/layout_animation_fall_down"
       android:visibility="gone" />-->
    <GridView
        android:id="@+id/grid_view_image_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_taken_grid_size"
        android:gravity="center"
        android:numColumns="4"
        android:layout_below="@+id/txtCat"
        />

</android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/swipe_container"
        android:id="@+id/ldtList"
        android:layout_above="@+id/ldtBottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Variety"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/item_price_text_size"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/variety_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:layoutAnimation="@anim/layout_animation_fall_down"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Items"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/item_price_text_size"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/item_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:layoutAnimation="@anim/layout_animation_fall_down"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
       android:id="@+id/ldtBottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/login_padding">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:textStyle="bold"
            android:id="@+id/txtTotalPrice"
            android:textSize="@dimen/item_heading_text_size"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:padding="@dimen/login_padding"
        android:background="@color/orange_color"
        android:gravity="center"
        android:id="@+id/ldtPlaceOrder">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_order"
            android:paddingRight="@dimen/login_padding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:textStyle="bold"
            android:textSize="@dimen/item_heading_text_size"
            android:id="@+id/txtPlaceItem"/>


    </LinearLayout>
    </LinearLayout>
</RelativeLayout>